# tlkr

./: pyproject.toml
core/: pyproject.toml
core/src/core/: __init__.py  config.py  schemas.py
core/tests/: conftest.py  test_schemas.py
tlkr-cli/src/tlkr_cli/: __init__.py
tlkr-core/: pyproject.toml
tlkr-core/src/tlkr_core/: __init__.py  config.py
tlkr-core/tlkr-cli/: pyproject.toml
tlkr-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
tlkr-server/generations/: placeholder.txt
tlkr-server/models/: placeholder.txt
tlkr-server/src/tlkr_server/: __init__.py  config.py  download_models.py
